--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Glorious Mumo Portfolio</h1>
-							<p>Data Analyst skilled in Excel,SPSS,MYSQL and Tableau. <a href="www.linkedin.com/in/glorious-the-data-demystifier">@Glorious</a> </p>
+							<p>Data Analyst skilled in Excel,SPSS,MYSQL and Tableau. <a href="https://www.linkedin.com/in/glorious-the-data-demystifier">@Glorious</a> </p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -50,12 +50,20 @@
 							
 						</header>
 						<div class="content">
-							<p><strong>https://github.com/Glorious-Mumo/MySQL-Project1</strong></p>
-							<p><strong>https://github.com/Glorious-Mumo/Portfolio-projects</strong></p>
-							<p><strong>https://public.tableau.com/app/profile/glorious.mumo/vizzes</strong></p>
+							<p><a href="https://github.com/Glorious-Mumo/MySQL-Project1" target="_blank" style="color:skyblue">MySQL Project 1 on GitHub</a></p>
+							<P>Details.................</P>
+
+    <p><a href="https://github.com/Glorious-Mumo/Portfolio-projects" target="_blank"  style="color:skyblue">Portfolio Projects on GitHub</a></p>
+	<P>Details.................</P>
+
+
+
+    <p><a href="https://public.tableau.com/app/profile/glorious.mumo/vizzes" target="_blank"  style="color:skyblue">Tableau Visualizations</a></p>
+	<P>Details.................</P>
+
 							<ul class="feature-icons">
 							</ul>
-							<p>Above are the links to the projects respectively.To view a project,simply copy any of the links above and paste it on your preferred web browser.</p>
+							<p>Above are the links to the projects respectively.To view a project,simply click.</p>
 						</header>
 						<div class="content">
 							</ul>
@@ -343,7 +351,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">gloriousmumo86@gmail.com</a>
+									<a href="mailto:gloriousmumo86@gmail.com">gloriousmumo86@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
@@ -355,7 +363,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
-										<li><a href="www.linkedin.com/in/glorious-the-data-demystifier" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.linkedin.com/in/glorious-the-data-demystifier" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/Glorious-Mumo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</li>
@@ -364,7 +372,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy;GLORIOUS. All rights reserved.</div>
 
 			</div>
 
