--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 						</header>
 						<div class="content">
 							<p><a href="https://github.com/Glorious-Mumo/MySQL-Project1" target="_blank" style="color:skyblue">MySQL Project 1 on GitHub</a></p>
-							<P>Details.................</P>
+							<P>Details; Data Analysis with SQL.</P>
 
     <p><a href="https://github.com/Glorious-Mumo/Portfolio-projects" target="_blank"  style="color:skyblue">Portfolio Projects on GitHub</a></p>
-	<P>Details.................</P>
+	<P>Details; Data Analysis with Excel.</P>
 
 
 
     <p><a href="https://public.tableau.com/app/profile/glorious.mumo/vizzes" target="_blank"  style="color:skyblue">Tableau Visualizations</a></p>
-	<P>Details.................</P>
+	<P>Details; Data Visualization with Tableau .</P>
 
 							<ul class="feature-icons">
 							</ul>
